fix: Better pratices and async fix with direct db query